test/functions/bradc/queryClassArgGenerics-bad.good
queryClassArgGenerics-bad.chpl:15: error: unresolved call 'foo(C(int,2), C(int,3))'
queryClassArgGenerics-bad.chpl:6: note: candidates are: foo(x: C(t = ?tt, r = ?rr), y: C(tt, rr))
